Start HTML layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+   <div id="bigcontainer">
+    <div id="header"></div>
+   <div>Search</div>
+   <div>Button</div>
+   <div>img</div>
+   <div>Susie Q</div>
+    <div id="dashboard"></div>
+    <div id="content"></div>
 
+
+   </div>
+    
+</body>
+</html>
