Add grid layout

--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
 </head>
 <body>
    <div id="bigcontainer">
-    <div id="header"></div>
-   <div>Search</div>
-   <div>Button</div>
-   <div>img</div>
-   <div>Susie Q</div>
-    <div id="dashboard"></div>
-    <div id="content"></div>
+    <div id="dashboard">
+        Dashboard
+    </div>
+ 
+    <div id="maincontent">
+        <div id="header">
+
+
+
+        </div>
+        <div id="content">
+Your Projects
+
+        </div>
+    </div>
 
 
    </div>
