Added styling elements and fixed grid issues in main content

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
                 
                 </div>
                 <div><img src="notify.svg" alt=""></div>
-                <div>icon</div>
+                <div><img src="profileicon.png" alt=""></div>
                 <div>Paul W.</div>
             </div>
-            <div id="headertwo">Hi there,<h2>Paul W (@Paul)</h2> </div>
+            <div id="headertwo">Hi there,
+                <h2>
+                    <div><img src="profileicon.png" alt=""></div>Paul W (@Paul)
+                </h2> </div>
 
 
 
@@ -50,25 +53,33 @@
         <h2>Your Project</h2>
         <h2>Announcements</h2>
          <div id="yourproject">
-            <p>project 1</p>
-            <p>project 2</p>
-            <p>project 3</p>
-            <p>project 4</p>
-            <p>project 5</p>
-            <p>project 6</p>
+            <div><h3>Super Cool Stuff</h3>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta atque deserunt earum animi assumenda voluptatum reprehenderit. Pariatur dolorum rerum sint!</div>
+            <div><h3>Even More Great Stuff</h3>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta atque deserunt earum animi assumenda voluptatum reprehenderit. Pariatur dolorum rerum sint!</div>
+            <div><h3>Fantastic Stuff</h3>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta atque deserunt earum animi assumenda voluptatum reprehenderit. Pariatur dolorum rerum sint!</div>
+            <div><h3>Amazing News!</h3>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta atque deserunt earum animi assumenda voluptatum reprehenderit. Pariatur dolorum rerum sint!</div>
+            <div><h3>Lovely News to hear!</h3>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta atque deserunt earum animi assumenda voluptatum reprehenderit. Pariatur dolorum rerum sint!</div>
+            <div><h3>Tragic News</h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta atque deserunt earum animi assumenda voluptatum reprehenderit. Pariatur dolorum rerum sint!d </div>
          </div>
          <div id="announcements">
             <div id="announce">
-                <p>announce 1</p>
-                <p>announce 2</p>
-                <p>announce 3</p>
+                <div><h4>Big Announcement</h4>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, ab.</div>
+                <div><h4>Another Big One</h4>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, ab.</div>
+                <div><h4>Huge News for All</h4>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, ab.</div>
             </div>
             <div id="trending">
                 <h2>Trending</h2>
-                <p>@Coty</p>
-                <p>@Paul</p>
-                <p>@Egg</p>
-                <p>@Eggan</p>
+                <p><img src="profileicon.png" alt="">@Coty</p>
+                <p><img src="profileicon.png" alt="">@Paul</p>
+                <p><img src="profileicon.png" alt="">@Egg</p>
+                <p><img src="profileicon.png" alt="">@Eggan</p>
             </div>
          </div>  
         </div>
